--- a/index.html
+++ b/index.html
@@ -90,11 +90,32 @@
             text-align: center;
             margin-top: 20px;
         }
+
+        @media (max-width: 1024px) {
+            .container {
+                padding: 10px;
+            }
+
+            table {
+                font-size: 14px;
+            }
+
+            .btn {
+                padding: 8px 15px;
+                font-size: 14px;
+            }
+        }
     </style>
 </head>
 <body>
     <h1>Gestionale Negozi</h1>
     <div class="container">
+
+        <div class="btn-container">
+            <input type="text" id="searchInput" placeholder="Cerca un negozio..." onkeyup="searchTable()" style="padding: 10px; width: 300px;">
+        </div>
+        <BR></BR>
+
         <table id="storeTable">
             <thead>
                 <tr>
@@ -103,8 +124,8 @@
                     <th>Materiale POP</th>
                     <th>Fatturazione Automatica</th>
                     <th>A2A</th>
-                    <th>Tiscali</th>
                     <th>Wordline</th>
+                    <th>Nuovo Portafoglio</th>
                     <th>Note</th>
                     <th>Azioni</th>
                 </tr>
@@ -119,8 +140,8 @@
                     <td id="totalMateriale">0</td>
                     <td id="totalFatturazione">0</td>
                     <td id="totalA2A">0</td>
-                    <td id="totalTiscali">0</td>
                     <td id="totalWordline">0</td>
+                    <td id="totalNuovoPortafoglio">0</td>
                     <td></td>
                     <td></td>
                 </tr>
@@ -142,7 +163,8 @@
 
         function saveData() {
             const table = document.getElementById("storeTable");
-            const data = Array.from(table.querySelectorAll("tbody tr")).map(row =>
+            const headers = Array.from(table.querySelectorAll("thead th")).map(th => th.textContent);
+            const rows = Array.from(table.querySelectorAll("tbody tr")).map(row =>
                 Array.from(row.cells).map(cell => {
                     const input = cell.querySelector("input, textarea");
                     if (input) {
@@ -152,55 +174,45 @@
                     return cell.textContent.trim();
                 })
             );
+            const data = { headers, rows };
             localStorage.setItem(STORAGE_KEY, JSON.stringify(data));
         }
 
         function loadData() {
-            const storedData = JSON.parse(localStorage.getItem(STORAGE_KEY) || "[]");
-            const tableBody = document.querySelector("#storeTable tbody");
-            storedData.forEach(rowData => {
-                const row = tableBody.insertRow();
-                row.innerHTML = rowData
-                    .map((cellData, i) => {
-                        if (i === rowData.length - 1) {
-                            return `
-                                <td>
-                                    <button class="btn btn-yellow" onclick="renameStore(this)">Rinomina</button>
-                                    <button class="btn btn-red" onclick="deleteStore(this)">Elimina</button>
-                                </td>`;
-                        } else if (typeof cellData === "boolean") {
-                            return `<td><input type="checkbox" onchange="updateTotals()" ${cellData ? "checked" : ""}></td>`;
-                        } else if (i === rowData.length - 2) {
-                            return `<td><textarea onchange="saveData()">${cellData}</textarea></td>`;
-                        } else {
-                            return `<td>${cellData}</td>`;
-                        }
-                    })
-                    .join("");
-            });
-            sortTable();
-            updateTotals();
-        }
+            const storedData = JSON.parse(localStorage.getItem(STORAGE_KEY) || "{}");
+            const { headers, rows } = storedData;
 
-        function updateTotals() {
-            const rows = document.querySelectorAll("#storeTable tbody tr");
-            const totals = document.querySelectorAll("tfoot td");
+            if (headers) {
+                const headerRow = document.querySelector("#storeTable thead tr");
+                headerRow.innerHTML = headers.map(header => `<th>${header}</th>`).join("");
+            }
 
-            totals.forEach((cell, index) => {
-                if (index > 0 && index < totals.length - 2) cell.textContent = 0;
-            });
-
-            rows.forEach(row => {
-                row.querySelectorAll("td input[type='checkbox']").forEach((checkbox, index) => {
-                    if (checkbox.checked) {
-                        const totalIndex = index + 1;
-                        totals[totalIndex].textContent = parseInt(totals[totalIndex].textContent) + 1;
-                    }
+            if (rows) {
+                const tableBody = document.querySelector("#storeTable tbody");
+                tableBody.innerHTML = "";
+                rows.forEach(rowData => {
+                    const row = tableBody.insertRow();
+                    row.innerHTML = rowData
+                        .map((cellData, i) => {
+                            if (i === rowData.length - 1) {
+                                return `
+                                    <td>
+                                        <button class="btn btn-yellow" onclick="renameStore(this)">Rinomina</button>
+                                        <button class="btn btn-red" onclick="deleteStore(this)">Elimina</button>
+                                    </td>`;
+                            } else if (typeof cellData === "boolean") {
+                                return `<td><input type="checkbox" onchange="updateTotals()" ${cellData ? "checked" : ""}></td>`;
+                            } else if (i === rowData.length - 2) {
+                                return `<td><textarea onchange="saveData()">${cellData}</textarea></td>`;
+                            } else {
+                                return `<td>${cellData}</td>`;
+                            }
+                        })
+                        .join("");
                 });
-            });
+            }
 
-            document.getElementById("totalStores").textContent = `Totale Negozi: ${rows.length}`;
-            saveData();
+            updateTotals();
         }
 
         function addStore() {
@@ -218,71 +230,34 @@
                 <td>${storeName}</td>
                 ${Array.from({ length: colCount }, () => '<td><input type="checkbox" onchange="updateTotals()"></td>').join('')}
                 <td><textarea placeholder="Aggiungi note..." onchange="saveData()"></textarea></td>
-                <td>
-                    <button class="btn btn-yellow" onclick="renameStore(this)">Rinomina</button>
-                    <button class="btn btn-red" onclick="deleteStore(this)">Elimina</button>
-                </td>`;
-            sortTable();
+                <td><button class="btn btn-yellow" onclick="renameStore(this)">Rinomina</button><button class="btn btn-red" onclick="deleteStore(this)">Elimina</button></td>`;
             updateTotals();
-        }
-
-        function sortTable() {
-            const tbody = document.querySelector("#storeTable tbody");
-            const rows = Array.from(tbody.rows);
-
-            rows.sort((a, b) => {
-                const nameA = a.cells[0].textContent.toLowerCase();
-                const nameB = b.cells[0].textContent.toLowerCase();
-                return nameA.localeCompare(nameB);
-            });
-
-            rows.forEach(row => tbody.appendChild(row));
-        }
-
-        function renameStore(button) {
-            const row = button.closest("tr");
-            const cell = row.cells[0];
-            const newName = prompt("Inserisci il nuovo nome del negozio:", cell.textContent);
-            if (newName) {
-                cell.textContent = newName;
-                sortTable();
-                saveData();
-            }
-        }
-
-        function deleteStore(button) {
-            const row = button.closest("tr");
-            row.remove();
-            updateTotals();
+            saveData();
         }
 
         function addColumn() {
             const colName = prompt("Inserisci il nome della nuova colonna:");
             if (!colName) return;
 
-            const table = document.getElementById("storeTable");
-            const headerRow = table.querySelector("thead tr");
-            const footerRow = table.querySelector("tfoot tr");
-
+            const headerRow = document.querySelector("#storeTable thead tr");
             const colIndex = headerRow.cells.length - 2;
 
             const newHeader = headerRow.insertCell(colIndex);
             newHeader.outerHTML = `<th>${colName}</th>`;
 
-            table.querySelectorAll("tbody tr").forEach(row => {
+            document.querySelectorAll("#storeTable tbody tr").forEach(row => {
                 const newCell = row.insertCell(colIndex);
                 newCell.innerHTML = '<input type="checkbox" onchange="updateTotals()">';
             });
 
-            const newFooter = footerRow.insertCell(colIndex);
-            newFooter.outerHTML = "<td>0</td>";
-
+            document.querySelector("tfoot tr").insertCell(colIndex).outerHTML = "<td>0</td>";
+            updateTotals();
             saveData();
         }
 
         function renameColumn() {
             const columnIndex = prompt("Inserisci il numero della colonna da rinominare (escludendo Note e Azioni):");
-            if (!columnIndex) return;
+            if (!columnIndex || isNaN(columnIndex)) return;
 
             const headerCell = document.querySelector(`#storeTable thead tr th:nth-child(${columnIndex})`);
             if (headerCell) {
@@ -294,15 +269,53 @@
 
         function deleteColumn() {
             const columnIndex = prompt("Inserisci il numero della colonna da eliminare (escludendo Note e Azioni):");
-            if (!columnIndex) return;
+            if (!columnIndex || isNaN(columnIndex)) return;
 
             const table = document.getElementById("storeTable");
             table.querySelectorAll("tr").forEach(row => {
                 const cell = row.cells[columnIndex - 1];
                 if (cell) cell.remove();
             });
-
             updateTotals();
+            saveData();
+        }
+
+        function searchTable() {
+    const input = document.getElementById("searchInput").value.toLowerCase();
+    const rows = document.querySelectorAll("#storeTable tbody tr");
+
+    rows.forEach(row => {
+        const storeName = row.cells[0].textContent.toLowerCase(); // Assumiamo che il nome del negozio sia nella prima cella
+        row.style.display = storeName.includes(input) ? "" : "none";
+    });
+}
+
+
+        function updateTotals() {
+            const rows = document.querySelectorAll("#storeTable tbody tr");
+            const totals = document.querySelectorAll("tfoot td");
+
+            // Reset totali
+            totals.forEach((cell, index) => {
+                if (index > 0 && index < totals.length - 2) {
+                    cell.textContent = 0;
+                }
+            });
+
+            // Calcolo totali
+            rows.forEach(row => {
+                row.querySelectorAll("td").forEach((cell, colIndex) => {
+                    const checkbox = cell.querySelector("input[type='checkbox']");
+                    if (checkbox && checkbox.checked) {
+                        const totalIndex = colIndex;
+                        if (totals[totalIndex]) {
+                            totals[totalIndex].textContent = parseInt(totals[totalIndex].textContent) + 1;
+                        }
+                    }
+                });
+            });
+
+            document.getElementById("totalStores").textContent = `Totale Negozi: ${rows.length}`;
             saveData();
         }
 
@@ -310,3 +323,4 @@
     </script>
 </body>
 </html>
+
