--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
             <button class="btn btn-yellow" onclick="renameColumn()">Rinomina Colonna</button>
             <button class="btn btn-red" onclick="deleteColumn()">Elimina Colonna</button>
         </div>
+        <td>
+            <button class="btn btn-yellow" onclick="renameStore(this)">Rinomina</button>
+            <button class="btn btn-red" onclick="deleteStore(this)">Elimina</button>
+        </td>
+        
     </div>
 
     <script>
@@ -267,6 +272,27 @@
             }
         }
 
+        function renameStore(button) {
+    const row = button.closest("tr"); // Trova la riga del pulsante cliccato
+    const cell = row.cells[0]; // Assumiamo che il nome del negozio sia nella prima cella
+    const currentName = cell.textContent.trim();
+    const newName = prompt("Inserisci il nuovo nome del negozio:", currentName);
+
+    if (newName && newName.trim() !== "") {
+        cell.textContent = newName.trim(); // Aggiorna il nome nella cella
+        saveData(); // Salva i dati aggiornati
+        sortTable(); // Riordina la tabella dopo la rinomina
+    }
+}
+
+function deleteStore(button) {
+    const row = button.closest("tr"); // Trova la riga del pulsante cliccato
+    row.remove(); // Rimuove la riga dalla tabella
+    updateTotals(); // Aggiorna i totali dopo la rimozione
+    saveData(); // Salva i dati aggiornati
+}
+
+
         function deleteColumn() {
             const columnIndex = prompt("Inserisci il numero della colonna da eliminare (escludendo Note e Azioni):");
             if (!columnIndex || isNaN(columnIndex)) return;
@@ -323,4 +349,5 @@
     </script>
 </body>
 </html>
+
 
