--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestionale Negozi con Statistiche</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <title>Gestionale Negozi</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -93,45 +92,16 @@
 
         .btn-container {
             text-align: center;
-            margin: 20px 0;
-        }
-
-        .statistics-container {
-            margin: 20px 0;
-            background: #f9f9f9;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .statistics-container h3 {
-            margin-bottom: 10px;
-            color: #007BFF;
-        }
-
-        .statistics-container ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        .statistics-container li {
-            margin-bottom: 5px;
-            font-size: 16px;
-        }
-
-        .chart-container {
-            margin: 20px auto;
-            width: 90%;
-            max-width: 800px;
         }
     </style>
 </head>
 <body>
-    <h1>Gestionale Negozi con Statistiche</h1>
+    <h1>Gestionale Negozi</h1>
     <div class="container">
         <div class="search-container">
             <input type="text" id="searchInput" placeholder="Cerca negozio..." onkeyup="searchTable()">
             <button class="btn" onclick="exportToCSV()">Esporta CSV</button>
+            <button class="btn" onclick="saveData()">Salva Dati</button>
         </div>
         <table id="storeTable">
             <thead>
@@ -167,13 +137,6 @@
             <button class="btn btn-yellow" onclick="renameColumn()">Rinomina Colonna</button>
             <button class="btn btn-red" onclick="deleteColumn()">Elimina Colonna</button>
         </div>
-        <div class="statistics-container">
-            <h3>Statistiche</h3>
-            <ul id="statisticsList"></ul>
-        </div>
-        <div class="chart-container">
-            <canvas id="statisticsChart"></canvas>
-        </div>
     </div>
 
     <script>
@@ -192,6 +155,7 @@
             );
             const totals = Array.from(document.querySelectorAll("#storeTable tfoot td")).map(td => td.textContent.trim());
             localStorage.setItem(STORAGE_KEY, JSON.stringify({ headers, rows, totals }));
+            alert("Dati salvati con successo!");
         }
 
         function loadData() {
@@ -254,72 +218,137 @@
 
             document.getElementById("totalStores").textContent = `Totale Negozi: ${rows.length}`;
             saveData();
-            updateStatistics();
         }
 
-        function updateStatistics() {
-            const rows = document.querySelectorAll("#storeTable tbody tr");
-            const columns = document.querySelectorAll("#storeTable thead th");
-            const statisticsList = document.getElementById("statisticsList");
-            const totals = document.querySelectorAll("#storeTable tfoot td");
+        function addStore() {
+            const storeName = document.getElementById("newStoreName").value.trim();
+            if (!storeName) {
+                alert("Inserisci un nome valido per il negozio!");
+                return;
+            }
 
-            statisticsList.innerHTML = "";
+            const tableBody = document.querySelector("#storeTable tbody");
+            const colCount = document.querySelector("#storeTable thead tr").cells.length - 3;
 
-            const stats = Array.from(columns).slice(1, -2).map((col, index) => {
-                let checkedCount = 0;
-                rows.forEach(row => {
-                    const checkbox = row.cells[index + 1]?.querySelector("input[type='checkbox']");
-                    if (checkbox && checkbox.checked) {
-                        checkedCount++;
-                    }
-                });
-
-                const totalStores = rows.length;
-                const percentage = totalStores ? ((checkedCount / totalStores) * 100).toFixed(1) : 0;
-                return {
-                    column: col.textContent,
-                    checkedCount,
-                    totalStores,
-                    percentage
-                };
-            });
-
-            stats.forEach(stat => {
-                const listItem = document.createElement("li");
-                listItem.textContent = `${stat.column}: ${stat.checkedCount}/${stat.totalStores} (${stat.percentage}%)`;
-                statisticsList.appendChild(listItem);
-            });
-
-            updateChart(stats);
+            const row = tableBody.insertRow();
+            row.innerHTML = `
+                <td>${storeName}</td>
+                ${Array.from({ length: colCount }, () => '<td><input type="checkbox" onchange="updateTotals()"></td>').join("")}
+                <td><textarea placeholder="Aggiungi note..." onchange="saveData()"></textarea></td>
+                <td>
+                    <button class="btn btn-yellow" onclick="renameStore(this)">Rinomina</button>
+                    <button class="btn btn-red" onclick="deleteStore(this)">Elimina</button>
+                </td>`;
+            sortTable();
+            updateTotals();
         }
 
-        function updateChart(stats) {
-            const ctx = document.getElementById("statisticsChart").getContext("2d");
-            const existingChart = Chart.getChart("statisticsChart");
-            if (existingChart) existingChart.destroy();
+        function sortTable() {
+            const rows = Array.from(document.querySelectorAll("#storeTable tbody tr"));
+            rows.sort((a, b) => {
+                const nameA = a.cells[0].textContent.trim().toLowerCase();
+                const nameB = b.cells[0].textContent.trim().toLowerCase();
+                return nameA.localeCompare(nameB);
+            });
 
-            new Chart(ctx, {
-                type: "bar",
-                data: {
-                    labels: stats.map(stat => stat.column),
-                    datasets: [{
-                        label: "Numero di Spunte",
-                        data: stats.map(stat => stat.checkedCount),
-                        backgroundColor: "#007BFF"
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    plugins: {
-                        legend: {
-                            display: false
-                        }
-                    }
+            rows.forEach(row => document.querySelector("#storeTable tbody").appendChild(row));
+            saveData();
+        }
+
+        function addColumn() {
+            const columnName = prompt("Nome della nuova colonna:");
+            if (!columnName) return;
+
+            const headerRow = document.querySelector("#storeTable thead tr");
+            const footerRow = document.querySelector("#storeTable tfoot tr");
+
+            const colIndex = headerRow.cells.length - 2;
+            headerRow.insertCell(colIndex).outerHTML = `<th>${columnName}</th>`;
+
+            document.querySelectorAll("#storeTable tbody tr").forEach(row => {
+                row.insertCell(colIndex).innerHTML = '<input type="checkbox" onchange="updateTotals()">';
+            });
+
+            footerRow.insertCell(colIndex).textContent = "0";
+            saveData();
+        }
+
+        function renameColumn() {
+                        const columnIndex = prompt("Numero della colonna da rinominare (escluso Azioni):");
+            if (!columnIndex || isNaN(columnIndex)) return;
+
+            const headerCell = document.querySelector(`#storeTable thead th:nth-child(${columnIndex})`);
+            if (headerCell) {
+                const newName = prompt("Nuovo nome della colonna:");
+                if (newName) {
+                    headerCell.textContent = newName.trim();
+                    saveData();
                 }
-            });
+            }
         }
 
-        // Aggiungi altre funzioni (es. addStore, addColumn, etc.) come nel codice originale
+        function deleteColumn() {
+            const columnIndex = prompt("Numero della colonna da eliminare (escluso Azioni):");
+            if (!columnIndex || isNaN(columnIndex)) return;
+
+            document.querySelectorAll("#storeTable tr").forEach(row => {
+                const cell = row.cells[columnIndex - 1];
+                if (cell) cell.remove();
+            });
+
+            saveData();
+            updateTotals();
+        }
+
+        function exportToCSV() {
+            const rows = Array.from(document.querySelectorAll("#storeTable tr")).map(row => {
+                return Array.from(row.cells).map(cell => {
+                    const input = cell.querySelector("input, textarea");
+                    if (input) {
+                        if (input.type === "checkbox") return input.checked ? "1" : "0";
+                        return `"${input.value}"`;
+                    }
+                    return `"${cell.textContent.trim()}"`;
+                }).join(",");
+            }).join("\n");
+
+            const blob = new Blob([rows], { type: "text/csv" });
+            const url = URL.createObjectURL(blob);
+
+            const link = document.createElement("a");
+            link.href = url;
+            link.download = "negozi.csv";
+            link.click();
+            URL.revokeObjectURL(url);
+        }
+
+        function renameStore(button) {
+            const row = button.closest("tr");
+            const cell = row.cells[0];
+            const newName = prompt("Inserisci il nuovo nome del negozio:", cell.textContent.trim());
+            if (newName && newName.trim() !== "") {
+                cell.textContent = newName.trim();
+                sortTable();
+                saveData();
+            }
+        }
+
+        function deleteStore(button) {
+            const row = button.closest("tr");
+            row.remove();
+            updateTotals();
+            saveData();
+        }
+
+        function searchTable() {
+            const input = document.getElementById("searchInput").value.toLowerCase();
+            const rows = document.querySelectorAll("#storeTable tbody tr");
+
+            rows.forEach(row => {
+                const name = row.cells[0].textContent.toLowerCase();
+                row.style.display = name.includes(input) ? "" : "none";
+            });
+        }
 
         window.onload = function () {
             loadData();
