--- a/index.html
+++ b/index.html
@@ -93,10 +93,28 @@
         .btn-container {
             text-align: center;
         }
+	.counter {
+   	    display: inline-block;
+	    margin-left: 20px;
+   	    font-size: 16px;
+	    color: #007BFF;
+    	    font-weight: bold;
+	}
+
     </style>
 </head>
 <body>
     <h1>Gestionale Negozi</h1>
+<div class="btn-container">
+	    <div id="storeCounter" class="counter">Totale Negozi: 0</div>
+            <input type="text" id="newStoreName" placeholder="Nome negozio" style="padding: 10px; width: 200px;">
+            <button class="btn" onclick="addStore()">Aggiungi Negozio</button>
+            <button class="btn" onclick="addColumn()">Aggiungi Colonna</button>
+        </div>
+        <div class="btn-container">
+            <button class="btn btn-yellow" onclick="renameColumn()">Rinomina Colonna</button>
+            <button class="btn btn-red" onclick="deleteColumn()">Elimina Colonna</button>
+        </div>
     <div class="container">
         <div class="search-container">
             <input type="text" id="searchInput" placeholder="Cerca negozio..." onkeyup="searchTable()">
@@ -128,15 +146,6 @@
                 </tr>
             </tfoot>
         </table>
-        <div class="btn-container">
-            <input type="text" id="newStoreName" placeholder="Nome negozio" style="padding: 10px; width: 200px;">
-            <button class="btn" onclick="addStore()">Aggiungi Negozio</button>
-            <button class="btn" onclick="addColumn()">Aggiungi Colonna</button>
-        </div>
-        <div class="btn-container">
-            <button class="btn btn-yellow" onclick="renameColumn()">Rinomina Colonna</button>
-            <button class="btn btn-red" onclick="deleteColumn()">Elimina Colonna</button>
-        </div>
     </div>
 
     <script>
@@ -207,6 +216,11 @@
             totals.forEach((cell, index) => {
                 if (index > 0 && index < totals.length - 2) cell.textContent = "0";
             });
+
+	// Calcola e aggiorna il totale dei negozi
+    		const totalStores = rows.length;
+    		document.getElementById("storeCounter").textContent = `Totale Negozi: ${totalStores}`;
+    		totals[0].textContent = `Totale Negozi: ${totalStores}`;
 
             rows.forEach(row => {
                 row.querySelectorAll("td input[type='checkbox']").forEach((checkbox, colIndex) => {
@@ -356,3 +370,5 @@
     </script>
 </body>
 </html>
+
+
