--- a/index.html
+++ b/index.html
@@ -19,13 +19,24 @@
         }
 
         .container {
-            max-width: 1200px;
-            margin: 20px auto;
-            padding: 20px;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
+    margin: 20px auto;
+    padding: 20px;
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow-x: auto;
+    display: flex;
+    justify-content: center; /* Centra il contenuto */
+    align-items: center;    /* Allinea verticalmente */
+}
+.table-wrapper {
+    display: inline-block; /* Mantiene la dimensione in base alla tabella */
+    background-color: white;
+    border-radius: 8px;
+    padding: 15px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
 
         .search-container {
             margin-bottom: 20px;
@@ -106,6 +117,11 @@
 <body>
     <h1>Gestionale Negozi</h1>
 <div class="btn-container">
+	<div class="search-container" style="padding: 30px">
+            <input type="text" id="searchInput" placeholder="Cerca negozio..." onkeyup="searchTable()">
+            <button class="btn" onclick="exportToCSV()">Esporta CSV</button>
+            <button class="btn" onclick="saveData()">Salva Dati</button>
+        </div>
 	    <div id="storeCounter" class="counter">Totale Negozi: 0</div>
             <input type="text" id="newStoreName" placeholder="Nome negozio" style="padding: 10px; width: 200px;">
             <button class="btn" onclick="addStore()">Aggiungi Negozio</button>
@@ -116,11 +132,7 @@
             <button class="btn btn-red" onclick="deleteColumn()">Elimina Colonna</button>
         </div>
     <div class="container">
-        <div class="search-container">
-            <input type="text" id="searchInput" placeholder="Cerca negozio..." onkeyup="searchTable()">
-            <button class="btn" onclick="exportToCSV()">Esporta CSV</button>
-            <button class="btn" onclick="saveData()">Salva Dati</button>
-        </div>
+       
         <table id="storeTable">
             <thead>
                 <tr>
@@ -370,5 +382,3 @@
     </script>
 </body>
 </html>
-
-
