--- a/index.html
+++ b/index.html
@@ -19,24 +19,13 @@
         }
 
         .container {
-    margin: 20px auto;
-    padding: 20px;
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow-x: auto;
-    display: flex;
-    justify-content: center; /* Centra il contenuto */
-    align-items: center;    /* Allinea verticalmente */
-}
-.table-wrapper {
-    display: inline-block; /* Mantiene la dimensione in base alla tabella */
-    background-color: white;
-    border-radius: 8px;
-    padding: 15px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 20px;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
 
         .search-container {
             margin-bottom: 20px;
@@ -104,35 +93,39 @@
         .btn-container {
             text-align: center;
         }
-	.counter {
-   	    display: inline-block;
-	    margin-left: 20px;
-   	    font-size: 16px;
-	    color: #007BFF;
-    	    font-weight: bold;
-	}
 
+        .counter {
+            display: inline-block;
+            margin-left: 20px;
+            font-size: 16px;
+            color: #007BFF;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
     <h1>Gestionale Negozi</h1>
-<div class="btn-container">
-	<div class="search-container" style="padding: 30px">
-            <input type="text" id="searchInput" placeholder="Cerca negozio..." onkeyup="searchTable()">
-            <button class="btn" onclick="exportToCSV()">Esporta CSV</button>
-            <button class="btn" onclick="saveData()">Salva Dati</button>
-        </div>
-	    <div id="storeCounter" class="counter">Totale Negozi: 0</div>
-            <input type="text" id="newStoreName" placeholder="Nome negozio" style="padding: 10px; width: 200px;">
-            <button class="btn" onclick="addStore()">Aggiungi Negozio</button>
-            <button class="btn" onclick="addColumn()">Aggiungi Colonna</button>
-        </div>
-        <div class="btn-container">
-            <button class="btn btn-yellow" onclick="renameColumn()">Rinomina Colonna</button>
-            <button class="btn btn-red" onclick="deleteColumn()">Elimina Colonna</button>
-        </div>
+    <div class="btn-container">
+        <div id="storeCounter" class="counter">Totale Negozi: 0</div>
+        <input type="text" id="newStoreName" placeholder="Nome negozio" style="padding: 10px; width: 200px;">
+        <button class="btn" onclick="addStore()">Aggiungi Negozio</button>
+        <button class="btn" onclick="addColumn()">Aggiungi Colonna</button>
+    </div>
+    <div class="btn-container">
+        <button class="btn btn-yellow" onclick="renameColumn()">Rinomina Colonna</button>
+        <button class="btn btn-red" onclick="deleteColumn()">Elimina Colonna</button>
+    </div>
+    <div class="btn-container">
+        <button class="btn" onclick="exportData()">Esporta Dati</button>
+        <label class="btn">
+            Importa Dati
+            <input type="file" accept=".json" onchange="importData(event)" style="display: none;">
+        </label>
+    </div>
     <div class="container">
-       
+        <div class="search-container">
+            <input type="text" id="searchInput" placeholder="Cerca negozio..." onkeyup="searchTable()">
+        </div>
         <table id="storeTable">
             <thead>
                 <tr>
@@ -176,7 +169,6 @@
             );
             const totals = Array.from(document.querySelectorAll("#storeTable tfoot td")).map(td => td.textContent.trim());
             localStorage.setItem(STORAGE_KEY, JSON.stringify({ headers, rows, totals }));
-            alert("Dati salvati con successo!");
         }
 
         function loadData() {
@@ -221,6 +213,41 @@
             updateTotals();
         }
 
+        function exportData() {
+            const data = localStorage.getItem(STORAGE_KEY);
+            if (!data) {
+                alert("Nessun dato da esportare!");
+                return;
+            }
+            const blob = new Blob([data], { type: "application/json" });
+            const url = URL.createObjectURL(blob);
+            const link = document.createElement("a");
+            link.href = url;
+            link.download = "negozi_data.json";
+            link.click();
+            URL.revokeObjectURL(url);
+        }
+
+        function importData(event) {
+            const file = event.target.files[0];
+            if (!file) {
+                alert("Nessun file selezionato!");
+                return;
+            }
+            const reader = new FileReader();
+            reader.onload = function (e) {
+                try {
+                    const data = JSON.parse(e.target.result);
+                    localStorage.setItem(STORAGE_KEY, JSON.stringify(data));
+                    loadData();
+                    alert("Dati importati con successo!");
+                } catch (error) {
+                    alert("Errore durante l'importazione dei dati: il file non è valido.");
+                }
+            };
+            reader.readAsText(file);
+        }
+
         function updateTotals() {
             const rows = document.querySelectorAll("#storeTable tbody tr");
             const totals = document.querySelectorAll("#storeTable tfoot td");
@@ -229,10 +256,9 @@
                 if (index > 0 && index < totals.length - 2) cell.textContent = "0";
             });
 
-	// Calcola e aggiorna il totale dei negozi
-    		const totalStores = rows.length;
-    		document.getElementById("storeCounter").textContent = `Totale Negozi: ${totalStores}`;
-    		totals[0].textContent = `Totale Negozi: ${totalStores}`;
+            const totalStores = rows.length;
+            document.getElementById("storeCounter").textContent = `Totale Negozi: ${totalStores}`;
+            totals[0].textContent = `Totale Negozi: ${totalStores}`;
 
             rows.forEach(row => {
                 row.querySelectorAll("td input[type='checkbox']").forEach((checkbox, colIndex) => {
@@ -242,7 +268,6 @@
                 });
             });
 
-            document.getElementById("totalStores").textContent = `Totale Negozi: ${rows.length}`;
             saveData();
         }
 
@@ -382,3 +407,4 @@
     </script>
 </body>
 </html>
+
